--- a/client/index.html
+++ b/client/index.html
@@ -25,7 +25,7 @@
           <div id="myDropdown" class="dropdown-content">
             <a href="/api/covid-stats">COVID-19 Statistics</a>
             <a href="/api/countyInfo">County Stats</a>
-            <a href="#">Placeholder 02</a>
+            <a href="/api/vacByCountyController">Vaccination Data By County</a>
           </div>
         </div>
       </div>
